--- a/SistemaProyecto/SistemaProyecto/SistemaProyecto.csproj
+++ b/SistemaProyecto/SistemaProyecto/SistemaProyecto.csproj
@@ -98,7 +98,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\ClienteVo.cs" />
     <Compile Include="Controllers\ProveedoresVo.cs" />
+    <Compile Include="Dao\ClienteDao.cs" />
     <Compile Include="Dao\Conexion.cs" />
     <Compile Include="Dao\EmpleadoDao.cs" />
     <Compile Include="Dao\ProveedoresDao.cs" />
@@ -108,10 +110,17 @@
     <Compile Include="Login.Designer.cs">
       <DependentUpon>Login.cs</DependentUpon>
     </Compile>
+    <Compile Include="Models\Cliente.cs" />
     <Compile Include="Models\Empleado.cs" />
     <Compile Include="Models\Proveedores.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Views\MenuClientes.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\MenuClientes.Designer.cs">
+      <DependentUpon>MenuClientes.cs</DependentUpon>
+    </Compile>
     <Compile Include="Views\MenuPrincipal.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -137,6 +146,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Views\MenuClientes.resx">
+      <DependentUpon>MenuClientes.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Views\MenuPrincipal.resx">
       <DependentUpon>MenuPrincipal.cs</DependentUpon>
     </EmbeddedResource>
