--- a/SistemaProyecto/SistemaProyecto/SistemaProyecto.csproj
+++ b/SistemaProyecto/SistemaProyecto/SistemaProyecto.csproj
@@ -98,11 +98,13 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\AlmacenVo.cs" />
     <Compile Include="Controllers\CategoriaVo.cs" />
     <Compile Include="Controllers\ClienteVo.cs" />
     <Compile Include="Controllers\MarcasVo.cs" />
     <Compile Include="Controllers\ProductoVo.cs" />
     <Compile Include="Controllers\ProveedoresVo.cs" />
+    <Compile Include="Dao\AlmacenDao.cs" />
     <Compile Include="Dao\CategoriaDao.cs" />
     <Compile Include="Dao\ClienteDao.cs" />
     <Compile Include="Dao\Conexion.cs" />
@@ -116,6 +118,7 @@
     <Compile Include="Login.Designer.cs">
       <DependentUpon>Login.cs</DependentUpon>
     </Compile>
+    <Compile Include="Models\Almacen.cs" />
     <Compile Include="Models\Categoria.cs" />
     <Compile Include="Models\Cliente.cs" />
     <Compile Include="Models\Empleado.cs" />
@@ -124,6 +127,12 @@
     <Compile Include="Models\Proveedores.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Views\MenuAlmacenes.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\MenuAlmacenes.Designer.cs">
+      <DependentUpon>MenuAlmacenes.cs</DependentUpon>
+    </Compile>
     <Compile Include="Views\MenuCategoria.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -173,6 +182,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Views\MenuAlmacenes.resx">
+      <DependentUpon>MenuAlmacenes.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Views\MenuCategoria.resx">
       <DependentUpon>MenuCategoria.cs</DependentUpon>
     </EmbeddedResource>
